# image-editor-stable-diffusion

./: .gitignore  README.md  download.py  download_2.py  download_3.py  environment.yml  ideas.md  main_langsam.ipynb  main_langsam.py  main_sam.py  main_task_1.py  main_task_2.ipynb  main_task_2.py  main_task_2_2.py  main_task_2_3.py  pyproject.toml  task1.bash  task2_inter.bash  task_1_environment.yml
conf/: config.yaml
