[tool.poetry]
name = "object-pose-editor"
version = "0.1.0"
description = ""
authors = ["PSRahul <psrahul.ml@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
